# brainscope

./: .gitignore  README.md  app.py  inspect_file.py  main.py  pyproject.toml
src/: backend.py  dashboard.py
tests/: conftest.py  test_backend.py  test_dashboard.py
