[project]
name = "brainscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.2",
    "datashader>=0.18.2",
    "h5py>=3.15.1",
    "holoviews>=1.22.1",
    "pandas>=3.0.0",
    "panel>=1.8.7",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "tables>=3.10.2",
]
